--- a/js/package.json
+++ b/js/package.json
@@ -1,16 +1,34 @@
 {
     "name": "spark-server",
-    "version": "0.0.1",
+    "version": "0.1.0",
+    "license": "AGPL-3.0",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/spark/spark-server"
+    },
+    "homepage": "https://github.com/spark/spark-server",
+    "bugs": "https://github.com/spark/spark-server/issues",
+    "author": {
+        "name": "David Middlecamp",
+        "email": "david@spark.io",
+        "url": "https://www.spark.io/"
+    },
     "dependencies": {
+        "spark-protocol": "*",
         "moment": "~2.3.1",
         "express": "~3.4.4",
         "hogan-express": "~0.5.1",
         "request": "~2.27.0",
         "node-oauth2-server": "~1.5.3",
+        "ursa": "~0.8.0",
         "when": "~2.8.0",
         "xtend": "~2.1.1"
     },
     "scripts": {
         "start": "node main.js"
-    }
+    },
+    "main": "main.js",
+    "contributors": [
+        "Kenneth Lim <kennethlimcp@gmail.com>"
+    ]
 }
