--- a/js/package.json
+++ b/js/package.json
@@ -15,14 +15,14 @@
     },
     "dependencies": {
         "spark-protocol": "*",
-        "moment": "~2.3.1",
         "express": "~3.4.4",
         "hogan-express": "~0.5.1",
-        "request": "~2.27.0",
+        "request": "*",
         "node-oauth2-server": "~1.5.3",
-        "ursa": "~0.8.0",
-        "when": "~2.8.0",
-        "xtend": "~2.1.1"
+        "ursa": "*",
+        "when": "*",
+        "moment": "*",
+        "xtend": "*"
     },
     "scripts": {
         "start": "node main.js"
