Added myself to contributors

--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
             "name": "Kenneth Lim",
             "email": "kennethlimcp@gmail.com",
             "url": "https://github.com/kennethlimcp"
+        },
+        {
+            "name": "Emily Rose",
+            "email": "emily@spark.io",
+            "url": "https://github.com/emilyrose"
         }
     ]
 }
