--- a/js/package.json
+++ b/js/package.json
@@ -1,34 +1,36 @@
 {
-    "name": "spark-server",
-    "version": "0.1.1",
-    "license": "AGPL-3.0",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/spark/spark-server"
-    },
-    "homepage": "https://github.com/spark/spark-server",
-    "bugs": "https://github.com/spark/spark-server/issues",
-    "author": {
-        "name": "David Middlecamp",
-        "email": "david@spark.io",
-        "url": "https://www.spark.io/"
-    },
-    "dependencies": {
-        "spark-protocol": "*",
-        "express": "~3.4.4",
-        "hogan-express": "~0.5.1",
-        "request": "*",
-        "node-oauth2-server": "~1.5.3",
-        "ursa": "*",
-        "when": "*",
-        "moment": "*",
-        "xtend": "*"
-    },
-    "scripts": {
-        "start": "node main.js"
-    },
-    "main": "main.js",
-    "contributors": [
-        "Kenneth Lim <kennethlimcp@gmail.com>"
-    ]
+  "name": "spark-server",
+  "version": "0.1.1",
+  "license": "AGPL-3.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/spark/spark-server"
+  },
+  "homepage": "https://github.com/spark/spark-server",
+  "bugs": "https://github.com/spark/spark-server/issues",
+  "author": {
+    "name": "David Middlecamp",
+    "email": "david@spark.io",
+    "url": "https://www.spark.io/"
+  },
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "hogan-express": "^0.5.2",
+    "moment": "*",
+    "morgan": "^1.7.0",
+    "node-oauth2-server": "^1.5.3",
+    "request": "*",
+    "spark-protocol": "*",
+    "ursa": "*",
+    "when": "*",
+    "xtend": "*"
+  },
+  "scripts": {
+    "start": "node main.js"
+  },
+  "main": "main.js",
+  "contributors": [
+    "Kenneth Lim <kennethlimcp@gmail.com>"
+  ]
 }
