--- a/js/package.json
+++ b/js/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "connect-multiparty": "^2.0.0",
     "express": "^4.14.0",
     "hogan-express": "^0.5.2",
     "moment": "*",
