update oauth package
- new oauth2 server
- add refresh_tokens grants

--- a/js/package.json
+++ b/js/package.json
@@ -17,10 +17,10 @@
     "body-parser": "^1.15.2",
     "connect-multiparty": "^2.0.0",
     "express": "^4.14.0",
+    "express-oauth-server": "^1.0.0",
     "hogan-express": "^0.5.2",
     "moment": "*",
     "morgan": "^1.7.0",
-    "node-oauth2-server": "^1.5.3",
     "request": "*",
     "spark-protocol": "*",
     "ursa": "*",
