--- a/js/package.json
+++ b/js/package.json
@@ -17,7 +17,7 @@
     "body-parser": "^1.15.2",
     "connect-multiparty": "^2.0.0",
     "express": "^4.14.0",
-    "express-oauth-server": "^1.0.0",
+    "express-oauth-server": "git://github.com/durielz/express-oauth-server.git",
     "hogan-express": "^0.5.2",
     "moment": "*",
     "morgan": "^1.7.0",
