--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"url": "https://www.spark.io/"
 	},
 	"dependencies": {
-		"spark-protocol": "*",
+		"spark-protocol": "https://github.com/Brewskey/spark-protocol",
 		"express": "~3.4.4",
 		"hogan-express": "~0.5.1",
 		"request": "*",
