--- a/package.json
+++ b/package.json
@@ -13,21 +13,6 @@
     "email": "david@spark.io",
     "url": "https://www.spark.io/"
   },
-  "dependencies": {
-    "express": "~3.4.4",
-    "hogan-express": "~0.5.1",
-    "moment": "*",
-    "node-oauth2-server": "~1.5.3",
-    "request": "*",
-    "spark-protocol": "../spark-protocol",
-    "ursa": "*",
-    "when": "*",
-    "xtend": "*"
-  },
-  "scripts": {
-    "start": "node main.js"
-  },
-  "main": "main.js",
   "contributors": [
     {
       "name": "Kenneth Lim",
@@ -39,5 +24,30 @@
       "email": "emily@spark.io",
       "url": "https://github.com/emilyrose"
     }
-  ]
+  ],
+  "scripts": {
+    "build": "babel ./src --out-dir ./build",
+    "build:clean": "rimraf ./build",
+    "prebuild": "npm run build:clean",
+    "start": "nodemon --exec babel-node ./src/main.js --watch src",
+    "start:prod": "npm run build && node ./build/main.js"
+  },
+  "dependencies": {
+    "express": "~3.4.4",
+    "hogan-express": "~0.5.1",
+    "moment": "*",
+    "node-oauth2-server": "~1.5.3",
+    "request": "*",
+    "spark-protocol": "../spark-protocol",
+    "ursa": "*",
+    "when": "*",
+    "xtend": "*"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-plugin-transform-flow-strip-types": "^6.18.0",
+    "babel-preset-latest": "^6.16.0",
+    "nodemon": "^1.11.0",
+    "rimraf": "^2.5.4"
+  }
 }
