--- a/package.json
+++ b/package.json
@@ -47,12 +47,15 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-decorators": "^6.13.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-destructuring": "^6.19.0",
     "babel-plugin-transform-es2015-spread": "^6.8.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-1": "^6.16.0",
     "nodemon": "^1.11.0",
     "rimraf": "^2.5.4"
   }
