--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "babel ./src --out-dir ./build",
     "build:clean": "rimraf ./build",
     "prebuild": "npm run build:clean",
-    "start": "nodemon --exec babel-node ./src/main.js --watch src --watch ../spark-protocol/lib --ignore core_keys --ignore users",
+    "start": "nodemon --exec babel-node ./src/main.js --watch src --watch ../spark-protocol/lib --ignore core_keys --ignore users --ignore webhooks",
     "start:prod": "npm run build && node ./build/main.js"
   },
   "dependencies": {
