--- a/.eslintrc
+++ b/.eslintrc
@@ -36,11 +36,12 @@
     "import/no-named-as-default": 0,
     "import/no-unresolved": 2,
     "import/prefer-default-export": 0,
+    "newline-per-chained-call": 0,
+    "no-console": 1,
+    "no-duplicate-imports": 0,
+    "no-mixed-operators": 0,
     "no-underscore-dangle": 0,
     "no-use-before-define": 0,
-    "no-mixed-operators": 0,
-    "no-console": 1,
-    "newline-per-chained-call": 0,
     "object-curly-spacing": 2,
     "semi": 2,
     "sorting/sort-object-props": [
