--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "start:prod": "npm run build && node ./build/main.js"
   },
   "dependencies": {
+    "basic-auth-parser": "0.0.2",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-oauth-server": "^2.0.0-b1",
