--- a/package.json
+++ b/package.json
@@ -31,7 +31,19 @@
     "lint": "eslint -- .",
     "prebuild": "npm run build:clean",
     "start": "nodemon --exec babel-node ./src/main.js --watch src --watch ../spark-protocol/lib --ignore core_keys --ignore users --ignore webhooks",
-    "start:prod": "npm run build && node ./build/main.js"
+    "start:prod": "npm run build && node ./build/main.js",
+    "test": "ava",
+    "test:watch": "ava --watch"
+  },
+  "ava": {
+    "babel": "inherit",
+    "files": [
+      "test/*.js"
+    ],
+    "require": [
+      "babel-polyfill",
+      "babel-register"
+    ]
   },
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -46,6 +58,7 @@
     "xtend": "*"
   },
   "devDependencies": {
+    "ava": "^0.17.0",
     "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-transform-class-properties": "^6.19.0",
@@ -54,10 +67,12 @@
     "babel-plugin-transform-es2015-destructuring": "^6.19.0",
     "babel-plugin-transform-es2015-spread": "^6.8.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-1": "^6.16.0",
+    "babel-register": "^6.18.0",
     "eslint": "^3.11.0",
     "eslint-config-airbnb-base": "^10.0.1",
     "eslint-plugin-flowtype": "^2.28.2",
@@ -65,6 +80,8 @@
     "eslint-plugin-sorting": "^0.3.0",
     "express-oauth-server": "^2.0.0-b1",
     "nodemon": "^1.11.0",
-    "rimraf": "^2.5.4"
+    "rimraf": "^2.5.4",
+    "superset": "^1.0.1",
+    "supertest-as-promised": "^4.0.2"
   }
 }
