--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
     "prebuild": "npm run build:clean",
     "start": "nodemon --exec babel-node ./src/main.js --watch src --watch ../spark-protocol/lib --ignore core_keys --ignore users --ignore webhooks",
     "start:prod": "npm run build && node ./build/main.js",
-    "test": "ava",
-    "test:watch": "ava --watch"
+    "test": "NODE_ENV=test ava",
+    "test:watch": "NODE_ENV=test ava --watch"
   },
   "ava": {
+    "verbose": true,
     "babel": "inherit",
     "files": [
-      "test/*.js"
+      "test/*.test.js",
+      "!test/__test_data__/*"
     ],
     "require": [
       "babel-polyfill",
