Starting to port over devices controller.

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-sorting": "^0.3.0",
     "express-oauth-server": "^2.0.0-b1",
+    "flow-bin": "^0.36.0",
     "nodemon": "^1.11.0",
     "rimraf": "^2.5.4",
     "superset": "^1.0.1",
