--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "moment": "*",
     "moniker": "^0.1.2",
     "morgan": "^1.7.0",
+    "multer": "^1.2.1",
     "request": "*",
     "spark-protocol": "../spark-protocol",
     "ursa": "*",
