--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
       "!test/__test_data__/*"
     ],
     "require": [
-      "babel-polyfill",
       "babel-register"
     ]
   },
@@ -73,7 +72,7 @@
     "babel-plugin-transform-es2015-destructuring": "^6.19.0",
     "babel-plugin-transform-es2015-spread": "^6.8.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
-    "babel-polyfill": "^6.16.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
