add uuid package, use it in webhookFileRepo/userFileRepository, fix some Flow and add missing async

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "request": "*",
     "spark-protocol": "../spark-protocol",
     "ursa": "*",
+    "uuid": "^3.0.1",
     "when": "*",
     "xtend": "*"
   },
