--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "basic-auth-parser": "0.0.2",
     "body-parser": "^1.15.2",
+    "constitute": "^1.6.2",
     "express": "^4.14.0",
     "express-oauth-server": "^2.0.0-b1",
     "moment": "*",
