Added a script for downloading binaries and creating a settings file.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "scripts": {
     "build": "babel ./src --out-dir ./build",
     "build:clean": "rimraf ./build",
+    "update": "node ./scripts/update-firmware-binaries",
     "lint": "eslint -- .",
+    "postinstall": "npm run update-firmware",
     "prebuild": "npm run build:clean",
     "start": "nodemon --exec babel-node ./src/main.js --watch src --watch ../spark-protocol/dist --ignore data",
     "start:prod": "npm run build && node ./build/main.js",
@@ -86,10 +88,14 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-sorting": "^0.3.0",
     "flow-bin": "^0.37.0",
+    "github": "^7.3.2",
     "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2",
+    "request": "^2.79.0",
     "rimraf": "^2.5.4",
+    "rmfr": "^1.0.1",
     "supertest": "^2.0.1",
-    "supertest-as-promised": "^4.0.2"
+    "supertest-as-promised": "^4.0.2",
+    "uglifyjs": "^2.4.10"
   }
 }
