--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "constitute": "^1.6.2",
     "express": "^4.14.0",
     "express-oauth-server": "^2.0.0-b1",
+    "hogan.js": "^3.0.2",
     "moment": "*",
     "moniker": "^0.1.2",
     "morgan": "^1.7.0",
