--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "prebuild": "npm run build:clean",
     "start": "nodemon --exec babel-node ./src/main.js --watch src --watch ../spark-protocol/dist --ignore data",
     "start:prod": "npm run build && node ./build/main.js",
-    "test": "ava",
-    "test:watch": "ava --watch"
+    "test": "ava --serial",
+    "test:watch": "ava --watch --serial"
   },
   "pre-commit": "test",
   "ava": {
@@ -91,6 +91,7 @@
     "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2",
     "rimraf": "^2.5.4",
+    "sinon": "^1.17.7",
     "supertest": "^2.0.1",
     "supertest-as-promised": "^4.0.2",
     "uglifyjs": "^2.4.10"
