fix eslint-errors add eslint precommit hook

--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "test": "ava --serial",
     "test:watch": "ava --watch --serial"
   },
-  "pre-commit": "test",
+  "pre-commit": [
+    "lint",
+    "test"
+  ],
   "ava": {
     "verbose": true,
     "babel": "inherit",
