--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "moniker": "^0.1.2",
     "morgan": "^1.7.0",
     "multer": "^1.2.1",
+    "nullthrows": "^1.0.0",
     "request": "*",
     "rimraf": "^2.5.4",
     "rmfr": "^1.0.1",
