--- a/package.json
+++ b/package.json
@@ -52,8 +52,9 @@
   },
   "dependencies": {
     "array-flatten": "^2.1.1",
-    "babel": "^6.5.2",
+    "babel-cli": "^6.18.0",
     "babel-loader": "^6.2.10",
+    "babel-runtime": "^6.22.0",
     "basic-auth-parser": "0.0.2",
     "binary-version-reader": "^0.5.0",
     "body-parser": "^1.15.2",
@@ -62,6 +63,7 @@
     "express-oauth-server": "^2.0.0-b1",
     "hogan.js": "^3.0.2",
     "lodash": "^4.17.4",
+    "mkdirp": "^0.5.1",
     "moment": "*",
     "morgan": "^1.7.0",
     "multer": "^1.2.1",
@@ -75,7 +77,6 @@
   },
   "devDependencies": {
     "ava": "^0.17.0",
-    "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-decorators": "^6.13.0",
