--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "postinstall": "npm run update-firmware",
     "prebuild": "npm run build:clean",
     "start": "nodemon --exec babel-node ./src/main.js --watch src --watch ../spark-protocol/dist --ignore data",
-    "start:prod": "npm run build && node ./build/main.js",
+    "start:prod": "npm run build && node ./dist/main.js",
     "test": "ava --serial",
     "test:watch": "ava --watch --serial",
     "update-firmware": "node ./node_modules/spark-protocol/dist/scripts/update-firmware-binaries"
