--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "start:prod": "npm run build && node ./dist/main.js",
     "test": "ava --serial",
     "test:watch": "ava --watch --serial",
-    "update-firmware": "node ./node_modules/spark-protocol/dist/scripts/update-firmware-binaries"
+    "update-firmware": "node ./node_modules/spark-protocol/dist/scripts/update-firmware-binaries",
+    "watch": "babel ./src --out-dir ./dist --watch"
   },
   "pre-commit": [
     "lint",
