--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   "main": "./dist/exports.js",
   "scripts": {
     "build": "babel ./src --out-dir ./dist",
-    "build:watch": "babel ./src --out-dir ./dist --watch",
     "build:clean": "rimraf ./build",
+    "build:watch": "babel ./src --out-dir ./dist --watch",
     "lint": "eslint --fix --max-warnings 0 -- .",
+    "migrate-to-mongo": "babel-node ./src/scripts/migrateFilesToDatabase mongo",
+    "migrate-to-tingo": "babel-node ./src/scripts/migrateFilesToDatabase tingo",
     "prebuild": "npm run build:clean",
     "start": "nodemon --exec babel-node ./src/main.js --watch src --watch ../spark-protocol/dist --ignore data",
     "start:prod": "npm run build && node ./dist/main.js",
