Updates and improvements from setting up particle-collider

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   ],
   "main": "./dist/exports.js",
   "scripts": {
-    "build": "babel ./src --out-dir ./dist",
+    "build": "babel ./src --out-dir ./dist --copy-files",
     "build:clean": "rimraf ./build",
     "build:watch": "babel ./src --out-dir ./dist --watch",
     "lint": "eslint --fix --max-warnings 0 -- .",
@@ -35,7 +35,7 @@
     "migrate-to-tingo": "babel-node ./src/scripts/migrateFilesToDatabase tingo",
     "prebuild": "npm run build:clean",
     "start": "nodemon --exec babel-node ./src/main.js --watch src --watch ../spark-protocol/dist --ignore data",
-    "start:prod": "npm run build && node ./dist/main.js",
+    "start:prod": "npm run build && node --prof ./dist/main.js",
     "test": "ava --serial",
     "test:watch": "ava --watch --serial",
     "update-firmware": "node ./node_modules/spark-protocol/dist/scripts/update-firmware-binaries",
@@ -64,6 +64,7 @@
     "basic-auth-parser": "0.0.2",
     "binary-version-reader": "^0.5.0",
     "body-parser": "^1.15.2",
+    "chalk": "^1.1.3",
     "constitute": "^1.6.2",
     "express": "^4.14.0",
     "express-oauth-server": "^2.0.0-b1",
