Added Image to Docker HUB, remove Node-GYP from Build Process

--- a/examples/docker/production/Dockerfile
+++ b/examples/docker/production/Dockerfile
@@ -1,11 +1,13 @@
+
 #
 # Local Cloud Sparc-Server  
 #
 
 #
-# based on Alpine Node (version 6 or 7 is tested, other Version should work as well)
+# based on Alpine Node (version 8 is tested, other Version should work as well)
 #
-FROM mhart/alpine-node:6
+FROM mhart/alpine-node:7
+
 
 # create the Working Directory
 RUN mkdir -p /usr/src/localCloud
@@ -13,18 +15,17 @@ RUN mkdir -p /usr/src/localCloud
 # install all dependencies and delete them in ONE single RUN
 # you can split this into different steps, but this will make the Image MUCH larger!
 RUN apk add --no-cache git; \
-    apk add --no-cache python; \
-    apk add --no-cache make; \
-    apk add --no-cache g++; \
     cd /usr/src/localCloud; \
-    npm install -g node-gyp; \
     git clone https://github.com/Brewskey/spark-server.git; \
-    cd /usr/src/localCloud/spark-server; \
+    cd  /usr/src/localCloud/spark-server; \
+    git checkout c182732cad6075354846f6034076fe987d599994; \
+    rm -rf .git; \
     npm install; \
-    npm run update-firmware; \
-    npm run prebuild; \    
-    npm run build; \    
-    apk del python make g++
+    apk del git; \
+    npm run prebuild; \
+    npm run build
+
+
 
 # Set Working Directory
 WORKDIR /usr/src/localCloud/spark-server
@@ -38,6 +39,8 @@ EXPOSE 8080
 
 # Expose DataDirectory to store DB and Device Keys 
 VOLUME /usr/src/localCloud/spark-server/data
+
+
 
 ENTRYPOINT ["npm", "run", "start:prod"]
 
