--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "migrate-to-mongo": "babel-node ./src/scripts/migrateFilesToDatabase mongo",
     "migrate-to-tingo": "babel-node ./src/scripts/migrateFilesToDatabase tingo",
     "prebuild": "npm run build:clean",
-    "start": "nodemon --exec babel-node ./src/main.js --watch src --watch ../spark-protocol/dist --ignore data",
+    "start": "nodemon --exec babel-node ./src/main.js --watch src --watch ../spark-protocol/src --ignore data",
     "start:prod": "node ./dist/main.js",
     "test": "ava --serial",
     "test:watch": "ava --watch --serial",
@@ -68,6 +68,8 @@
     "constitute": "^1.6.2",
     "express": "^4.14.0",
     "express-oauth-server": "^2.0.0-b3",
+    "h5.coap": "git://github.com/morkai/h5.coap.git",
+    "h5.linkformat": "git://github.com/morkai/h5.linkformat.git",
     "hogan.js": "^3.0.2",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
