--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "constitute": "^1.6.2",
+    "ec-key": "0.0.2",
     "express": "^4.14.0",
     "express-oauth-server": "^2.0.0-b3",
     "hogan.js": "^3.0.2",
