--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "watch": "babel ./src --out-dir ./dist --watch"
   },
   "pre-commit": [
+    "lint",
+    "test"
   ],
   "ava": {
     "verbose": true,
