--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "build:clean": "rimraf ./build",
     "build:watch": "babel ./src --out-dir ./dist --watch",
     "lint": "eslint --fix --max-warnings 0 -- .",
-    "migrate-to-mongo": "babel-node ./src/scripts/migrateFilesToDatabase mongo",
-    "migrate-to-tingo": "babel-node ./src/scripts/migrateFilesToDatabase tingo",
+    "migrate-files-to-mongo": "babel-node ./src/scripts/migrateFilesToDatabase mongo",
+    "migrate-files-to-nedb": "babel-node ./src/scripts/migrateFilesToDatabase nedb",
     "prebuild": "npm run build:clean",
     "start:warn": "babel-node ./src/main.js --trace-warnings",
     "start": "nodemon --exec babel-node ./src/main.js --watch src --watch ../spark-protocol/dist --ignore data",
@@ -83,7 +83,6 @@
     "request": "*",
     "rmfr": "^1.0.1",
     "spark-protocol": "git+https://github.com/Brewskey/spark-protocol.git#dev",
-    "tingodb": "git+https://github.com/Brewskey/tingodb.git",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
