--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "build": "babel ./src --out-dir ./dist --copy-files",
     "build:clean": "rimraf ./build",
     "build:watch": "babel ./src --out-dir ./dist --watch",
+    "examples:build" : "babel ./examples --out-dir ./dist/examples",
+    "examples:run:eventprovider" : "node ./dist/examples/eventProvider.js",
     "lint": "eslint --fix --max-warnings 0 -- .",
     "migrate-files-to-mongo": "babel-node ./src/scripts/migrateFilesToDatabase mongo",
     "migrate-files-to-nedb": "babel-node ./src/scripts/migrateFilesToDatabase nedb",
