--- a/package.json
+++ b/package.json
@@ -80,13 +80,14 @@
   "dependencies": {
     "array-flatten": "^2.1.1",
     "babel-cli": "^6.22.2",
+    "babel-core": "^6.25.0",
     "babel-runtime": "^6.22.0",
     "basic-auth-parser": "0.0.2",
     "binary-version-reader": "^0.5.0",
     "body-parser": "^1.15.2",
     "bunyan": "^1.8.10",
     "bunyan-middleware": "^0.8.0",
-    "chalk": "^1.1.3",
+    "chalk": "^2.0.1",
     "constitute": "^1.6.2",
     "ec-key": "0.0.2",
     "express": "^4.14.0",
@@ -107,7 +108,7 @@
     "uuid": "^3.0.1"
   },
   "devDependencies": {
-    "ava": "^0.17.0",
+    "ava": "^0.20.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-decorators": "^6.24.1",
@@ -121,20 +122,20 @@
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-1": "^6.16.0",
     "babel-register": "^6.18.0",
-    "eslint": "^3.11.0",
-    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint": "^4.1.1",
+    "eslint-config-airbnb-base": "^11.2.0",
     "eslint-config-prettier": "^2.2.0",
     "eslint-plugin-flowtype": "^2.28.2",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-sorting": "^0.3.0",
-    "flow-bin": "^0.37.4",
+    "flow-bin": "^0.49.1",
     "lint-staged": "^4.0.0",
     "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2",
     "prettier": "^1.4.4",
     "rimraf": "^2.5.4",
-    "sinon": "^1.17.7",
-    "supertest": "^2.0.1",
+    "sinon": "^2.3.6",
+    "supertest": "^3.0.0",
     "uglifyjs": "^2.4.10"
   }
 }
