--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "bunyan-middleware": "^0.8.0",
     "chalk": "^1.1.3",
     "constitute": "^1.6.2",
+    "csv": "^1.1.1",
     "ec-key": "0.0.2",
     "express": "^4.14.0",
     "express-oauth-server": "^2.0.0-b3",
