add bunyan to start scripts

--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "migrate-files-to-nedb": "babel-node ./src/scripts/migrateFilesToDatabase nedb",
     "prebuild": "npm run build:clean",
     "prettify": "prettier --single-quote --trailing-comma all --write",
-    "start": "nodemon --exec babel-node ./src/main.js --watch src --watch ../spark-protocol/dist --ignore data",
-    "start:debug": "nodemon --exec babel-node ./src/main.js --watch src --watch ../spark-protocol/src --ignore data",
-    "start:prod": "node ./dist/main.js",
-    "start:warn": "babel-node ./src/main.js --trace-warnings",
+    "start": "nodemon --exec babel-node ./src/main.js --watch src --watch ../spark-protocol/dist --ignore data | bunyan",
+    "start:debug": "nodemon --exec babel-node ./src/main.js --watch src --watch ../spark-protocol/src --ignore data | bunyan",
+    "start:prod": "node ./dist/main.js | bunyan",
+    "start:warn": "babel-node ./src/main.js --trace-warnings | bunyan",
     "test": "ava --serial --no-cache",
     "test:watch": "ava --watch --serial",
     "update-firmware": "node ./node_modules/spark-protocol/dist/scripts/update-firmware-binaries",
